fix broken layout on success page

--- a/stylesheets/success.css
+++ b/stylesheets/success.css
@@ -3,10 +3,6 @@ body, html {
   font-family: Source Sans Pro;
 }
 .message {
-  position: absolute;
-  top: 220px;
-  left: 50%;
-  transform: translate(-50%, 0%);
   width: 300px;
   background: white;
   border-radius: 8px;
@@ -14,26 +10,17 @@ body, html {
   text-align: center;
   font-weight: 300;
   color: #2c2928;
-  transition: top 0.3s cubic-bezier(0.31, 0.25, 0.5, 1.5), opacity 0.2s ease-in-out;
 }
 .message .check {
   position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(4);
+  top: calc(6rem + 100px);
+  left: calc(50% - 60px);
   width: 120px;
   height: 110px;
   background: #71c341;
   color: white;
   font-size: 7.6rem;
-  padding-top: 10px;
   border-radius: 50%;
-  opacity: 0;
-  transition: transform 0.2s 0.25s cubic-bezier(0.31, 0.25, 0.5, 1.5), opacity 0.1s 0.25s ease-in-out;
-}
-.message .scaledown {
-  transform: translate(-50%, -50%) scale(1);
-  opacity: 1;
 }
 .message p {
   font-size: 2.2rem;
